# stac-eoap

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  environment.yml
application-data-flow/: index.html
data-flow-management/: index.html
definitions/: index.html
docs/: application-data-flow.md  data-flow-management.md  definitions.md  hands-on.md  index.md  platform-data-flow.md
hands-on/: index.html
notebooks/: 01 EO Products as Input Data.ipynb  02 EO Products as Output Data.ipynb  03 Landsat-9 Water Bodies.ipynb  03 Platform Data Management CLI.ipynb  04 As an Application Package.ipynb  04 Platform Data Management CWL.ipynb  05 Platform Data Management Application Wrapping.ipynb
notebooks/cwl-cli/: stage-in.cwl  stage-out.cwl
notebooks/cwl-workflow/: app-water-bodies.cwl
notebooks/cwl-wrapper/conf/: stage-in.cwl  stage-out.cwl
platform-data-flow/: index.html
search/: search_index.json
